# flet-info-popup

./: README.md  mkdocs.yml  pyproject.toml
docs/: FletInfoPopup.md  index.md
examples/flet_info_popup_example/: pyproject.toml
examples/flet_info_popup_example/src/: main.py
src/flet_info_popup/: __init__.py  flet_info_popup.py
src/flet_info_popup.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/flutter/flet_info_popup/: README.md  pubspec.yaml
src/flutter/flet_info_popup/lib/: flet_info_popup.dart
src/flutter/flet_info_popup/lib/src/: create_control.dart  flet_info_popup.dart
